FLUID-3067: Modified the browse component CSS for incoming animation. Transitions wont be visible until this webkit bug (https://bugs.webkit.org/show_bug.cgi?id=27990) makes it into mobile safari
svn path=/fluid/infusion/trunk/; revision=7702

--- a/src/webapp/framework/fss/css/fss-theme-iphone.css
+++ b/src/webapp/framework/fss/css/fss-theme-iphone.css
@@ -10,6 +10,9 @@
     -webkit-background-clip: content-box;
     -webkit-background-size: 10px 1px;
 }
+body {
+	overflow:hidden;
+}
 .fl-theme-iPhone {
     font:normal 17px Helvetica, sans-serif; /* Base font rules */
     margin:0;
