--- a/src/webapp/framework/fss/css/fss-transitions.css
+++ b/src/webapp/framework/fss/css/fss-transitions.css
@@ -35,6 +35,6 @@
 /**************************************/
 .fl-theme-iPhone .fl-animation-fadeout {
 	-webkit-animation-name: fadeOut;
-    -webkit-animation-duration: 1s;
+    -webkit-animation-duration: 0.75s;
     -webkit-animation-iteration-count: 1;
 }
